--- a/appointment-backend/src/main/resources/application.properties
+++ b/appointment-backend/src/main/resources/application.properties
@@ -1,1 +1,30 @@
-spring.application.name=appointment-backend
+spring.application.name=${SPRING_APPLICATION_NAME}
+
+# ===============================
+# MongoDB
+# ===============================
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+
+# (ONLY keep these excludes if you truly need them)
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration,org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
+
+# ===============================
+# JWT
+# ===============================
+jwt.secret=${JWT_SECRET}
+jwt.expiration-ms=${JWT_EXPIRATION_MS}
+
+# ===============================
+# Firebase
+# ===============================
+firebase.service.account=${FIREBASE_SERVICE_ACCOUNT}
+
+# ===============================
+# Gmail SMTP
+# ===============================
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_SMTP_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_SMTP_STARTTLS_ENABLE}
