--- a/frontend/veersa_health/pubspec.yaml
+++ b/frontend/veersa_health/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   fl_chart: ^1.1.1
   uuid: ^4.5.1
   flutter_launcher_icons: ^0.14.4
+  dio: ^5.9.0
+  firebase_messaging: ^16.1.0
+  geolocator: ^14.0.2
+  firebase_core: ^4.3.0
 
 dev_dependencies:
   flutter_test:
