--- a/frontend/veersa_health/pubspec.yaml
+++ b/frontend/veersa_health/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_messaging: ^16.1.0
   geolocator: ^14.0.2
   firebase_core: ^4.3.0
+  share_plus: ^12.0.1
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
