--- a/frontend/veersa_health/linux/CMakeLists.txt
+++ b/frontend/veersa_health/linux/CMakeLists.txt
@@ -7,7 +7,7 @@ project(runner LANGUAGES CXX)
 set(BINARY_NAME "veersa_health")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.example.veersa_health")
+set(APPLICATION_ID "com.company.veersaHealth")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
