--- a/frontend/veersa_health/splash.yaml
+++ b/frontend/veersa_health/splash.yaml
@@ -1,10 +1,10 @@
 flutter_native_splash:
   color: "#FFFFFF"
-  image: assets/logo/app_logo.png
+  image: assets/logo/app_logo5.png
   
   android_12:
     color: "#FFFFFF"
-    image: assets/logo/app_logo.png
+    image: assets/logo/app_logo5.png
 
   android: true
   ios: true
