--- a/appointment-backend/src/main/resources/application.properties
+++ b/appointment-backend/src/main/resources/application.properties
@@ -4,9 +4,8 @@ spring.application.name=${SPRING_APPLICATION_NAME}
 # MongoDB
 # ===============================
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+spring.data.mongodb.auto-index-creation=true
 
-# (ONLY keep these excludes if you truly need them)
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration,org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
 
 # ===============================
 # JWT
