--- a/frontend/veersa_health/pubspec.yaml
+++ b/frontend/veersa_health/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_core: ^4.3.0
   share_plus: ^12.0.1
   geocoding: ^4.0.0
+  flutter_local_notifications: ^19.5.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
