email service updated

--- a/appointment-backend/.env
+++ b/appointment-backend/.env
@@ -28,3 +28,6 @@ SPRING_MAIL_USERNAME=mailtopankaj120@gmail.com
 SPRING_MAIL_PASSWORD=nxvdesijuewxwglz
 SPRING_MAIL_SMTP_AUTH=true
 SPRING_MAIL_SMTP_STARTTLS_ENABLE=true
+
+
+RESEND_API_KEY=re_Y69PL5d5_DiDJfTrsutsHTdXwxxLxxWiw
