--- a/appointment-backend/src/main/resources/application.properties
+++ b/appointment-backend/src/main/resources/application.properties
@@ -21,9 +21,18 @@ firebase.service.account=${FIREBASE_SERVICE_ACCOUNT}
 # ===============================
 # Gmail SMTP
 # ===============================
-spring.mail.host=${SPRING_MAIL_HOST}
-spring.mail.port=${SPRING_MAIL_PORT}
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_SMTP_AUTH}
-spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_SMTP_STARTTLS_ENABLE}
+#spring.mail.host=${SPRING_MAIL_HOST}
+#spring.mail.port=${SPRING_MAIL_PORT}
+#spring.mail.username=${SPRING_MAIL_USERNAME}
+#spring.mail.password=${SPRING_MAIL_PASSWORD}
+#spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_SMTP_AUTH}
+#spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_SMTP_STARTTLS_ENABLE}
+#spring.mail.properties.mail.debug=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
+#spring.mail.properties.mail.smtp.starttls.required=true
+
+resend.api.key=${RESEND_API_KEY}
+resend.from.email=${RESEND_FROM_EMAIL:onboarding@resend.dev}
+
