added automated tests for time validation and race condition handling

--- a/appointment-backend/.env
+++ b/appointment-backend/.env
@@ -31,3 +31,4 @@ SPRING_MAIL_SMTP_STARTTLS_ENABLE=true
 
 
 RESEND_API_KEY=re_Y69PL5d5_DiDJfTrsutsHTdXwxxLxxWiw
+RESEND_FROM_EMAIL=no-reply@pankajrana.in
