--- a/appointment-backend/src/main/resources/application.properties
+++ b/appointment-backend/src/main/resources/application.properties
@@ -34,5 +34,7 @@ firebase.service.account=${FIREBASE_SERVICE_ACCOUNT}
 #spring.mail.properties.mail.smtp.starttls.required=true
 
 resend.api.key=${RESEND_API_KEY}
-resend.from.email=${RESEND_FROM_EMAIL:onboarding@resend.dev}
+resend.from.email=${RESEND_FROM_EMAIL}
+
+
 
